# fluistern

./: .env.example  .gitignore  Cargo.toml  README.md  fluistern-gui.desktop  gui.py  install-deps.sh  install.sh  plauder.desktop  select-language.sh  select-mic.sh  voice-input-daemon.sh  voice-input.sh
.github/workflows/: build.yml
src/: config.rs  database.rs  main.rs
ui/: app.slint
